--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,5 +12,8 @@
   <meta name="description" content="{{ site.description | escape }}">
   {% endif %}
 
-  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}">
+    {% if site.github or site.url %}
+      <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }} Feed" href="{{ '/feed.xml' | relative_url }}">
+    {% endif %}
 </head>
