--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,5 +10,6 @@
     </main>
 
     {% include footer.html %}
+    <script src="{{ '/assets/js/site.js' | relative_url }}" defer></script>
   </body>
 </html>
